--- a/工具使用.md
+++ b/工具使用.md
@@ -40,6 +40,166 @@
 打开文件后，在普通模式下输入 `:set ff=unix`。
 
 
+# git
+
+## 一些指令
+
+1. `git status`： 查看当前git状态，用于判断是否已经准备好推送分支
+    
+2. `git add .`: 添加所有的文件
+    
+3. `git commit -m "..."`: 添加推送时的描述
+    
+4. `git remote add origin git网址`: 连接要推送的目的网址
+    
+5. `git push -u origin 分支名称`: 推送代码
+    
+6. `git checkout -b 新分支名称`: 切换到一个新的分支
+    
+7. `git branch`: 查看当前所有分支
+    
+8. `git log`: 查看git的提交版本和id，可用于查看需要恢复的版本号
+    
+9. `git reset --hard 版本号`: 恢复到指定版本
+    
+10. `git push -f origin 分支名称`: 强制push
+    
+11. `git clone git网址`: 克隆一个项目到本地
+    
+12. `git branch 目标分支名`: 切换至目标分支
+    
+13. `git merge 目标分支名`: 将目标分支与本分支合并
+    
+14. `git push`: 分支合并后推送至云端
+    
+
+git分为本地仓库和远程仓库，一般情况写完代码，commit到本地仓库（生成本地仓的commit ID，代表当前提交代码的版本号），然后push到远程仓库（记录这个版本号）。
+
+```sh
+echo "# md2html" >> README.md  
+git init  
+git add README.md  
+git commit -m "first commit"  
+git branch -M main  
+git remote add origin https://github.com/Xiang-M-J/md2html.git  
+git push -u origin main
+```
+
+
+**更新本地仓库的代码**
+
+```sh
+git pull https://github.com/xxx/xx.git master
+```
+或者（这里的 origin 是一个别名）
+```sh
+git fetch origin  
+git merge origin/master
+```
+
+
+
+# Fillzilla
+
+## 使用Fillzilla与ubuntu虚拟机互相连接
+
+### Ubuntu端
+
+1. 设置超级用户
+2. 关掉防火墙    
+3. 安装openssh-server
+```sh
+sudo apt-get install openssh-server
+```
+
+4. 使用 ifconfig 查看网址
+ens33 .....  
+inet 192.168.40.128
+
+### Windows端
+
+需要安装 Fillzilla，主机输入网址，用户名输入xmj 密码输入 端口输入22
+
+
+# ffmpeg
+
+## ffmpeg使用手册
+
+0. ffmpeg下载：[ffmpeg第一弹:ffmpeg介绍和开发环境搭建 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/336663258)
+    
+    注意从[Releases · BtbN/FFmpeg-Builds (github.com)](https://github.com/BtbN/FFmpeg-Builds/releases)下载-shared.zip版本
+    
+1. ffmpeg 录制桌面： 
+
+```powershell
+ffmpeg -f gdigrab -i desktop -f mp4 d:/out.mp4
+```
+    
+2. ffmpeg 剪辑视频
+
+```powershell
+ffmpeg -ss 00:00:10 -t 30 -i src.mp4 -codec copy cut.mp4
+```
+
+这条命令可以从源文件src.mp4中剪切出一个视频片段，并存储成out.mp4
+    
++ -ss: 起始时间戳
++ -t: 持续时间，单位为秒
++ -i: 源文件名字，这里是src.mp4
++ -codec copy: 沿用原来的编码格式，cut.mp4为目标文件的文件名
+    
+3. ffmpeg 视频抽帧： 
+
+```powershell
+ffmpeg -i test.mp4 %05d.jpg
+```
+这条命令可以将test.mp4文件抽帧，抽出来的图片帧在当前目录下，名字为"帧号.jpg",不足5位则补0,如00001.jpg
+    
+4. ffmpeg提取视频中的音频： 
+
+```powershell
+ffmpeg -i test.mp4 -f mp3 -vn test.mp3
+```
+
+ + -i 表示input，即输入文件
+ + -f 表示format，即输出格式
+ + -vn表示vedio not，即输出不包含视频
+    
+5. ffmpeg给音频添加封面：
+
+```powershell
+ffmpeg -i 音乐.mp3 -i 封面.jpg -map 0:0 -map 1:0 -c copy -id3v2_version 3 -metadata:s:v title="Album cover" -metadata:s:v comment="Cover (Front)" 音乐.mp3
+```
+
+6. ffmpeg将图片序列转成视频
+
+```powershell
+ffmpeg -f image2 -framerate 2 -i %3d.png out.mp4
+```
+    
++ 若图像之间格式不一致，可先转成相同格式再操作，代码参见：[img2mp4byffmpeg.py](https://gist.github.com/Xiang-M-J/89d411e2df0dd23f77f3bba691e5e6a8)
+
+7. 多个视频拼接
+
+```powershell
+ffmpeg -f concat -safe 0 -i filelist.txt -c copy out.mp4
+```
+
+filelist.txt的格式为："file\t"+"'"+father_path+"\"+file_path+"'\n"
+
+```txt
+file 'd:\001.mp4' file 'd:\002.mp4' file 'd:\003.mp4' file 'd:\004.mp4'
+```
+
+
+8. 视频按时长分段
+    
+```powershell
+ffmpeg -i "input_video.mp4" -f segment -segment_time 3600 -vcodec copy -reset_timestamps 1 -map 0:0 -an output_video%d.mp4
+```
+
+时长由参数 -segment_time 指定，单位为 s。这个处理似乎没有声音了。
+
 
 
 # 正则表达式
@@ -566,13 +726,13 @@ MATCH (n)-[r]->(m) RETURN n, r, m
 
 ## 如何使用AuraDB
 
-AuraDB是一款在线的图数据库，网址为[neo4j](https://console.neo4j.io/)
+AuraDB是一款在线的图数据库，网址为 [neo4j](https://console.neo4j.io/)
 图数据库运行在实例（Instance）中，每次创建实例后，会生成对应的密码，用于后续的连接。
-进入实例后，首先需要导入数据，进入Import界面，首先先创建节点，点击这个按钮来创建节点
+进入实例后，首先需要导入数据，进入 Import 界面，首先先创建节点，点击这个按钮来创建节点
 
 ![image-20231228194632204](D:\TyporaImages\image-20231228194632204.png)
-
-选择该节点，创建节点的属性，可以直接从csv文件中导入。
+ 
+选择该节点，创建节点的属性，可以直接从 csv 文件中导入。
 
 两个节点之间可以创建关系，直接从一个节点的边缘拖到另一个节点的边缘即可自动创建关系。
 
@@ -782,7 +942,6 @@ server {
     location / {
         root /data/www;
     }
-
     location /images/ {
         root /data;
     }
@@ -1573,7 +1732,6 @@ http {
 `||`：逻辑或，可以用于连接两条命令，第一条命令运行通过就忽略第二条命令，第一条命令不通过就执行第二条命令。
 
 
-
 ### 基本命令
 
 #### tree
@@ -1590,7 +1748,20 @@ http {
 
 `tree -f`：在每个文件或目录之前，显示完整的相对路径名称
 
-#### rm
+#### mkdir 创建目录
+
+```sh
+mkdir test
+```
+
+
+#### touch 创建文件
+
+```sh
+touch test.txt
+```
+
+#### rm 删除
 
 **删除单个文件**
 
@@ -1618,6 +1789,12 @@ rm -r mydir
 chmod +x run.sh
 ```
 
+
+#### which 查看命令路径
+
+```sh
+which ls   # 查看 ls 命令的路径
+``` 
 
 #### du/df 查看路径大小
 
@@ -1659,8 +1836,215 @@ zip -s 0 split.zip --out single.zip
 unzip single.zip
 ```
 
+#### find 查找文件
 
-### 控制语句
+用于在指定目录下查找文件和目录
+
+```sh
+find [路径] [匹配条件] [动作]
+```
+
+**路径**是要查找的目录路径，可以是一个目录或文件名，也可以是多个路径，多个路径之间用空格分隔，如果未指定路径，则默认为当前目录。
+
+**匹配条件**是可选参数，用于指定查找的条件，可以是文件名、文件类型、文件大小等等。
+- `-name pattern`：按文件名查找，支持使用通配符 `*` 和 `?`。
+- `-type type`：按文件类型查找，可以是 `f`（普通文件）、`d`（目录）、`l`（符号链接）等。
+
+**动作**用于对匹配到的文件执行操作，比如删除、复制等。
+
+>注意与 cmd 中的 find 区分
+
+
+#### ln 链接
+
+```sh
+ ln [参数][源文件或目录][目标文件或目录]
+```
+
++ ln -s 建立软链接
++ 源文件要使用绝对路径，而不使用相对路径
++ 没有 -s 参数建立的是一个硬链接文件
+
+
+#### tar 打包压缩
+
+tar 是Linux中最常用的备份工具，此命令可以把一系列文件打包到一个大文件中，也可以把一个打包的大文件恢复成一系列文件。
+
+```sh
+tar -cvf py.tar 01.py 02.py 03.py # 打包
+tar -xvf py.tar    # 解包
+tar -zcvf archive.tar.gz directory  # 将 directory 压缩至 archive.tar.gz
+tar -xzvf archive.tar.gz         # 解压 archive.tar.gz 
+```
+
+| 选项  | 含义                                 |
+| --- | ---------------------------------- |
+| c   | 生成档案文件，创建打包文件                      |
+| x   | 解压档案文件                             |
+| v   | 列出归档解档的详细过程，显示进度                   |
+| f   | 指定档案文件名称，f 后面一定是 .tar 文件，所以必须放选项后面 |
+
+#### apt-get 软件管理
+
+apt-get install xxx ：下载软件
+apt-get remove xxx：删除软件
+apt-get upgrade：更新包
+apt-get update：更新软件源
+
+
+#### shutdown 关机
+
+ shutdown 命令可以安全关闭或者重新启动系统
+
+```sh
+shutdown -r now     # 重启系统
+shutdown now        # 立即关机
+shutdown 20:25      # 系统在今天的 20:25 关机
+shutdown +10        # 再过10分钟关机
+shutdown -c         # 取消之前的计划
+```
+
+
+
+### 获取系统信息
+
+#### 查看 Linux 版本
+
+```sh
+lsb_release -a
+```
+
+
+#### 查看内核版本
+
+```sh
+cat /proc/version
+```
+
+
+#### 时间与日期
+
+```sh
+date    # 查看系统时间
+cal     # calender查看日历，-y选项可以查看一年的日历
+```
+
+#### 进程信息
+
+```sh
+ps aux      # process status 查看进程的详细状况
+top         # 动态显示运行中的进程并且排序
+kill[-9]进程代号  # 终止指定代号的进程，-9代表强行终止
+```
+
+关于 ps 的说明
+
+| 选项  | 含义                   |
+| --- | -------------------- |
+| a   | 显示终端上的所有进程，包括其他用户的进程 |
+| u   | 显示进程的详细状态            |
+| x   | 显示没有控制终端的进程          |
++ 提示：使用 kill 命令时，最好只终止当前用户开启的进程，而不要终止 root 身份开启的进程，否则可能导致系统崩溃
++ PID即为进程代号
++ 要退出 top 只需按 q 即可
+
+
+#### 网络信息
+
+```sh
+ifconfig    # 查询网卡信息
+ping ip     # 检测到目标ip的连接是否正常
+```
+
+> ping 一般用于检测当前计算机到目标计算机之间的网络是否通畅，数值越大，速度越慢
+
+
+#### 查看用户信息
+
+| 序号  | 命令      | 作用            |
+| --- | ------- | ------------- |
+| 01  | id[用户名] | 查看用户UID和GID信息 |
+| 02  | who     | 查看当前所有登录的用户列表 |
+| 03  | whoami  | 查看当前登录用户的账户名  |
+
+### 远程登录和复制文件
+
+#### ssh 远程登录
+
+```sh
+ssh [-p port] user@remote
+```
+
+- user 是在远程机器上的用户名
+- remote 是远程机器的地址，可以是IP/域名，或者是别名
+- port 是 SSH Server 监听的端口，如果不指定，就为默认值  22
+
+**SSH 的基本知识**
+- SSH 客户端是一种使用 Secure Shell(SSH) 协议连接到远程计算机的软件程序
+- SSH 是目前较可靠，专为远程登录会话和其他网络服务提供安全性的协议
+    - 利用 SSH 协议可以有效防止远程管理过程中的信息泄露
+    - 通过 SSH 协议可以对所有传输的数据进行加密，也能够防止 DNS 欺骗和 IP 欺骗        
+- SSH 的另一项优点是传输的数据可以是经过压缩的，所以可以加快传输的速度
+
+**域名**
+- 由一串用点分割的名字组成，例如：www.baidu.com
+- 是IP地址的别名 
+**端口号**
+- IP地址：通过IP地址找到网络上的计算机
+- 端口号：通过端口号可以找到计算机上运行的程序
+    - SSH服务器的默认端口为22，如果是默认端口，在连接的时候可以省略
+- 常见服务器端口列表
+
+|序号|服务|端口号|
+|---|---|---|
+|01|SSH服务器|22|
+|02|Web服务器|80|
+|03|HTTPS|443|
+|04|FTP服务器|21|
+
+> ping www.baidu.com 后可以获得它的IP地址 180.101.49.12
+
+
+#### scp 复制文件
+    
+- 地址格式与ssh基本相同，但在指定端口时用的是大写的 -P
+
+```sh
+cp -P port 01.py user@remote:Desktop/01.py
+```
+
+把本地目录下的01.py文件复制到远程家目录的Desktop/01.py
+
+```sh
+scp -P port user@remote:Desktop/01.py 01.py
+```
+
+把远程家目录的Desktop/01.py复制到本地目录下的01.py文件
+
+```sh
+scp -r demo user@remote:Desktop
+```
+
+把本地目录下的demo文件夹复制到远程家目录的Desktop文件夹
+
+```sh
+scp -r user@remote:Desktop demo
+```
+
+把远程家目录的Desktop文件夹复制到本地目录下的demo文件夹
+
+
+|选项|含义|
+|---|---|
+|-r|若给出的源文件是目录文件，则scp将递归复制该目录下的所有子目录和文件|
+|-p|若端口不是22，则需要大写字母P指定端口|
+
+>使用FillZilla可以实现可视化文件移动（端口选用22）
+
+
+### 控制和循环
+
+#### 控制
 
 ```sh
 if [ expression ] 
@@ -1669,7 +2053,7 @@ then
 fi
 ```
 
-### 循环语句
+#### 循环
 
 ```sh
 #!/bin/bash
@@ -1715,7 +2099,7 @@ echo -e "开始"
 ### 常见错误
 
 
-`[: XXXX: unexpected operator`
+>[: XXXX: unexpected operator
 
 这种情况大概率是由于在程序中判断变量是否与另一个值相等使用了下面的语法，且在运行时使用 `sh run.sh` 命令。
 
@@ -1757,27 +2141,37 @@ touch main.py & code main.py
 touch创建文件为bash的语法，可以换成`cd.>a.txt`。
 ### 基本命令
 
-#### tree
+#### tree 
 `tree [path] [/f][/a]`，Windows中的`tree`命令功能弱于Unix中的`tree`命令
 `/f`显示每个文件中文件的名称
 `/a`使用ASCII字符，而不使用扩展字符
 
-#### del
+#### del 删除文件夹
 `del filename` 删除文件
 
-#### rmdir
+#### rmdir 删除文件夹
 `rmdir [/s][/q] foldername`：删除文件夹
 `/s`代表删除所有子目录跟其中的档案
 `/q`代表不再询问
-#### type
+#### type 查看文件内容
 `type filename`：查看文件内容
-#### netstat
+#### netstat 查看网络状态
 `netstat -ano|findstr "8080"`：查看某一端口（8080）的使用情况
-#### tasklist
+#### tasklist 
 `tasklist|findstr "15008"`：根据PID号找到对应的程序
 `tasklist | findstr "cmd"`：根据程序名找到对应的程序
 #### ren(rename)
 `ren oldfilename newfilename`：文件重命名
+
+#### find 搜索内容
+
+`find "abc" d:\test.txt`：在D盘下的test.txt文件中查找含有 **abc** 这一字符串的所有行。
+
+`find /i "Abc" d:\test.txt`：不区分大小写
+
+
+
+
 
 ### 脚本相关
 
@@ -2217,9 +2611,7 @@ g++ main.cpp -o main.exe
 ### 多文件编译
 
 > ├── function.cpp 
->
 > ├── function.h 
->
 > └── main.cpp
 
 如果在`main.cpp`中引用了`function.h`
@@ -2297,7 +2689,6 @@ edit : main.o kbd.o command.o display.o \
        insert.o search.o files.o utils.o
         cc -o edit main.o kbd.o command.o display.o \
                    insert.o search.o files.o utils.o
-
 main.o : main.c defs.h
         cc -c main.c
 kbd.o : kbd.c defs.h command.h
@@ -2337,7 +2728,7 @@ clean :
 
 ##### makefile中使用变量
 
-在上面的例子中，
+在上面的例子中
 
 ```makefile
 edit : main.o kbd.o command.o display.o \
