--- a/数字通信.md
+++ b/数字通信.md
@@ -374,16 +374,131 @@ $$
 
 ## 第三章 数字调制方法
 
+一般来说，带通信号是调制后的信号（modulated），基带信号是调制（被调制的）信号（modulating）
+
+>基带信号被载波调制成带通信号
+
+### 3.1 数字调制信号的表示
+
+数字序列（假定为二进制序列）与信道上传输的信号序列之间的映射可以是无记忆的或有记忆的，也可以分成线性的或非线性的。
+
+假设每 $T_s$ 秒发送一次信号，其中 $T_s$ 称为信号传输间隔（Signaling Interval），即每秒发送
+$$
+R_s = \frac{1}{T_s}
+$$
+个信号。参数 $R_s$ 称为信号速率或符号速率（Symbol Rate）。因为每一个信号携带 k 个比特信息，比特间隔（Bit Interval）$T_b$ 为
+$$
+T_b = \frac{T_s}{k}=\frac{T_s}{\log_2M}
+$$
+比特率 R
+$$
+R = kR_s=R_s \log_2M
+$$
+
+若 $s_m(t)$ 的能量记为 ${\varepsilon _m}$，平均信号能量为
+$$
+\varepsilon_{avg}=\sum_{m=1}^Mp_m\varepsilon_m
+$$
+每个比特的平均能量：
+$$
+{\varepsilon _{bavg}} = {{{\varepsilon _{avg}}} \over k} = {{{\varepsilon _{avg}}} \over {{{\log }_2}M}}
+$$
+发送机的平均功率：
+$$
+{P_{avg}} = {{{\varepsilon _{bavg}}} \over {{T_b}}} = {R_b}{\varepsilon _{bavg}}
+$$
 
 
+### 3.2 无记忆调制方法
 
+#### 3.2.1 脉冲幅度调制（PAM）
 
+信号波形可以表示为
 
+$$
+s_m(t)=A_m p(t)\qquad 1\le m\le M  \tag{3-2-1}
+$$
+式中，p(t) 是持续时间为 T 的脉冲，$\{A_m, 1\le m\le M\}$ 表示 M 个可能的幅度集合，相应于 $M=2^k$ 个可能的比特组的符号。通常，信号幅度 $A_m$ 取离散值
+$$
+{A_m} = 2m - 1 - M,\quad m = 1,2, \cdots ,M
+$$
+即 $\pm 1, \pm 3, \cdots , \pm (M - 1)$。
 
+信号能量为
 
+$$
+{\varepsilon _m} = \int_{ - \infty }^\infty  {A_m^2{p^2}(t)} dt = A_m^2{\varepsilon _p}
+$$
+信号的平均能量为
 
+$$
+\eqalign{
+  & {\varepsilon _{avg}} = {{2{\varepsilon _p}} \over M}\sum\limits_{m = 1}^M {A_m^2}  = {{2{\varepsilon _p}} \over M}\left( {1 + {3^2} +  \cdots  + {{(M - 1)}^2}} \right)  \cr 
+  &  = {{2{\varepsilon _p}} \over M}{{M({M^2} - 1)} \over 6} = {{({M^2} - 1){\varepsilon _p}} \over 3} \cr} 
+$$
+比特的平均能量为
 
+$$
+{\varepsilon _{avg}} = {{({M^2} - 1){\varepsilon _p}} \over {3{{\log }_2}M}}
+$$
 
+基带 PAM 信号被载波调制成带通信号，其等效低通形式为 $A_mg(t)$，其中 $A_m$ 和 g(t) 是实的。在这种情况下
+$$
+\eqalign{
+  & {s_m}(t) = {\mathop{\rm Re}\nolimits} \left[ {{s_{ml}}(t){e^{j2\pi {f_c}t}}} \right]  \cr 
+  &  = {\mathop{\rm Re}\nolimits} \left[ {{A_m}g(t){e^{j2\pi {f_c}t}}} \right] = {A_m}g(t)\cos (2\pi {f_c}t) \cr}   \tag{3-2-8}
+$$
+式中，$f_c$ 是载波频率，比较 3-2-1 和 3-2-8 可得，PAM 信号的一般形式为
+
+$$
+p(t) = g(t)\cos (2\pi {f_c}t)
+$$
+
+由于等效低通信号的能量是带通信号能量的 2 倍，带通 PAM 的信号能量为
+$$
+{\varepsilon _m} = {{A_m^2{\varepsilon _g}} \over 2}
+$$
+显然
+$$
+{\varepsilon _{avg}} = {{({M^2} - 1){\varepsilon _g}} \over 6}
+$$
+
+一般的 PAM 信号 $s_m(t)=A_mp(t)$ 的基为
+
+$$
+\phi (t) = {{p(t)} \over {\sqrt {{\varepsilon _p}} }}
+$$
+代入 $\varepsilon_g=2\varepsilon_p$，可以得到带通 PAM 的基
+
+$$
+\phi (t) = \sqrt {{2 \over {{\varepsilon _g}}}} g(t)\cos (2\pi {f_c}t)
+$$
+
+利用基信号可得
+
+$$
+\eqalign{
+  & {s_m}(t) = {A_m}\sqrt {{\varepsilon _p}} \phi (t) \quad (基带 PAM) \cr 
+  & {s_m}(t) = {A_m}\sqrt {{{{\varepsilon _g}} \over 2}} \phi (t) \quad (带通PAM) \cr} 
+$$
+这些信号的一维矢量表示形式为
+
+$$
+\eqalign{
+  & {s_m} = {A_m}\sqrt {{\varepsilon _p}}   \cr 
+  & {s_m} = {A_m}\sqrt {{{{\varepsilon _g}} \over 2}}  \cr} 
+$$
+星座图的能量可以通过计算相邻两点之间距离平方和。
+
+带通 PAM，PSK，QAM 有相同的一般形式
+$$
+{s_m}(t) = {\mathop{\rm Re}\nolimits} \left[ {{A_m}g(t){e^{j2\pi {f_c}t}}} \right],\quad m = 1,2,...,M
+$$
++ 对于 PAM，  $A_m = \pm 1, \pm 3, \cdots , \pm (M - 1)$ 为实数，幅度携带信息
+
++ 对于 PSK，${A_m} = {e^{j{{2\pi } \over M}\left( {m - 1} \right)}}$ 为复数，相位携带信息
+
++ 对于 QAM，${A_m} = {A_{mi}} + j{A_{mq}} = {r_m}{e^{j{\theta _m}}}$ 为复数，幅度和相位都携带信息
 
 
 
