--- a/计算机科学.md
+++ b/计算机科学.md
@@ -6,17 +6,13 @@
 
 前缀树，用于高效地存储和检索字符串数据集中的键，可以用于自动补完，拼写检查以及模糊搜索等。
 
-代码实现（C++），包括递归和非递归
-
- [trie.cpp](codes\trie\trie.cpp) 
+代码实现（C++） [trie.cpp](codes\trie\trie.cpp) ，包括递归和非递归，
 
 [【图解 Trie】两种实现 Trie 的方式及其优缺点对比分析 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/374363453)
 
-上面的代码仅适用于26个小写字母，支持中文可以参考[Trie树(字典树)_实现模糊查找(支持中文)_字典树模糊匹配-CSDN博客](https://blog.csdn.net/qq_31175231/article/details/77827324)  [trie_chinese.cpp](codes\trie\trie_chinese.cpp) 
+上面的代码仅适用于26个小写字母，支持中文可以参考[Trie树(字典树)_实现模糊查找(支持中文)_字典树模糊匹配-CSDN博客](https://blog.csdn.net/qq_31175231/article/details/77827324)  ，代码为：[trie_chinese.cpp](codes\trie\trie_chinese.cpp) 
 
-Csharp程序 ：[gmamaladze/trienet: .NET Implementations of Trie Data Structures for Substring Search, Auto-completion and Intelli-sense. Includes: patricia trie, suffix trie and a trie implementation using Ukkonen's algorithm. (github.com)](https://github.com/gmamaladze/trienet)
-
-
+Csharp程序 ：[.NET Implementations of Trie Data Structures for Substring Search, Auto-completion and Intelli-sense. Includes: patricia trie, suffix trie and a trie implementation using Ukkonen's algorithm. ](https://github.com/gmamaladze/trienet)
 
 
 
@@ -53,7 +49,7 @@ Csharp程序 ：[gmamaladze/trienet: .NET Implementations of Trie Data Structure
 
 对于$p_4$，位于$h_8$，所以检验的位置为$h_8,h_9,h_{10},h_{11}$，即读八位，隔八位
 
-第n位校验位校验的海明位是，从自身开始，读$2^{n-1}$位，隔$2^{n-1}$位，
+第 n 位校验位校验的海明位是，从自身开始，读$2^{n-1}$位，隔$2^{n-1}$位，
 
 知道校验位置后 ，对校验位置对应的信息位进行异或运算（默认是偶校验），即
 $$
@@ -119,7 +115,7 @@ $$
 $$
 L_o(p,w_o)=L_e(p,w_o)+\int_{S^2}f(p,w_o,w_i)L_i(p,w_i)|cos\theta_i|dw_i
 $$
-其中$L_o(p,w_o)$为从点p以方向$w_o$的射出辐射度，$L_e(p,w_o)$是从点p以方向$w_o$的发射辐射度，$f(p,w_o,w_i)$为双向散射分布函数，$L_i(p,w_i)$为入射光，为了简化积分，只计算光源方向以及完美反射和折射方向。
+其中$L_o(p,w_o)$为从点p以方向$w_o$的射出辐射度，$L_e(p,w_o)$是从点 p 以方向$w_o$的发射辐射度，$f(p,w_o,w_i)$为双向散射分布函数，$L_i(p,w_i)$为入射光，为了简化积分，只计算光源方向以及完美反射和折射方向。
 
 
 
@@ -187,15 +183,15 @@ $$
 
 ### 图像抗混淆采样
 
-由于图像中的一些频率不是带限的，所以无法通过*Nyquist*采样频率来进行抗混淆。
+由于图像中的一些频率不是带限的，所以无法通过 *Nyquist* 采样频率来进行抗混淆。
 
 1. Nonuniform Sampling
 
-​	使用	$\sum_{i=-\infty}^{\infty}\delta(x-(i+\frac{1}{2}-\xi)T)$进行采样，$\xi\in[0,1]$是一个随机数
+​	使用 $\sum_{i=-\infty}^{\infty}\delta(x-(i+\frac{1}{2}-\xi)T)$ 进行采样，$\xi\in[0,1]$ 是一个随机数
 
 2. Adaptive Sampling
 
-一种对抗混叠的方法是自适应超采样:如果我们能够识别频率高于奈奎斯特极限的信号区域，我们可以在这些区域进行额外的采样，而无需在任何地方增加采样频率的计算费用。要让这种方法在实践中很好地工作是很困难的，因为找到所有需要超采样的地方是很困难的。大多数这样做的技术是基于检查相邻的样本值，并找到两者之间的值有显著变化的地方;假设信号在那个区域有高频率。
+一种对抗混叠的方法是自适应超采样:如果我们能够识别频率高于奈奎斯特极限的信号区域，我们可以在这些区域进行额外的采样，而无需在任何地方增加采样频率的计算费用。要让这种方法在实践中很好地工作是很困难的，因为找到所有需要超采样的地方是很困难的。大多数这样做的技术是基于检查相邻的样本值，并找到两者之间的值有显著变化的地方；假设信号在那个区域有高频率。
 
 3. Prefiltering
 
@@ -415,7 +411,7 @@ void SamplerIntegrator::Render(const Scene &scene) {
 | b7   | b6   | b5   | b4   | b3   | b2   | b1   | b0   |
 | f    | f    | f    | f    | f    | f    | f    | f    |
 
-**s（1 bit）**表示符号位即为正数还是负数，**e（8 bits）**表示指数，部分**f（23 bits）**表示尾数部分。
+s(1 bit) 表示符号位即为正数还是负数，e(8 bits) 表示指数，部分 f(23 bits) 表示尾数部分。
 $$
 v=(-1)^{b_{31}}×2^{E-127}×(1+F)\\
 E = \sum_{i=23}^{30}b_{i}2^{i-23}\\
@@ -455,11 +451,10 @@ import struct
 
 def bytesToFloat(bytes):
     ba = bytearray(bytes)
-    # return struct.unpack("!f",ba)[0] #將 MSB的 bytes 转成 float，用“！f”参数
+    # return struct.unpack("!f",ba)[0] #將 MSB的 bytes 转成 float，用“!f”参数
     return struct.unpack("f",ba)[0] #將LSB bytes转成 float，用“f”参数
 
 print(bytesToFloat([0, 0, 128, 63]))
-
 ```
 
 | FORMAT   | C TYPE             | PYTHON TYPE        | STANDARD SIZE | NOTES    |
@@ -483,11 +478,12 @@ print(bytesToFloat([0, 0, 128, 63]))
 | p        | char[]             | string             |               |          |
 | P        | void *             | integer            |               | (5), (3) |
 
-注1.q和Q只在机器支持64位操作系统有意义
-注2.每个格式前可以有一个数字，表示个数
-注3.s格式表示一定长度的字符串，4s表示长度为4的字符串，但是p表示的是pascal字符串
-注4.P用来转换一个指针，其长度和机器字长相关
-注5.最后一个可以用来表示指针类型的，占4个字节
+1. q和Q只在机器支持64位操作系统有意义
+2. 每个格式前可以有一个数字，表示个数
+3. s格式表示一定长度的字符串，4s表示长度为4的字符串，但是p表示的是pascal字符串
+4. P用来转换一个指针，其长度和机器字长相关
+5. 最后一个可以用来表示指针类型的，占4个字节
+
 为了同c中的结构体交换数据，还要考虑有的c或c++编译器使用了字节对齐，通常是以4个字节为单位的32位系统，故而struct根据本地机器字节顺序转换.可以用格式中的第一个字符来改变对齐方式.定义如下：
 
 | CHARACTER | BYTE ORDER             | SIZE     | ALIGNMENT |
@@ -512,14 +508,14 @@ const buffer = new ArrayBuffer(4)
 const ui8 = new Uint8Array(buffer)
 const f32 = new Float32Array(buffer);
 f32[0] = a
-ui8
+ui8   // [219, 15, 73, 64]
 ```
 
-结果为 [219, 15, 73, 64]，对应的二进制为'11011011'、'00001111'、'01001001'、'01000000'
+ui8 对应的二进制为 '11011011'、'00001111'、'01001001'、'01000000'
 
 将二进制从高到低排列 01000000 01001001 00001111 11011011
 
-可以看到符号位为0，代表正数，指数部分为10000000，尾数部分为10010010000111111011011
+可以看到符号位为 0，代表正数，指数部分为 10000000，尾数部分为 10010010000111111011011
 $$
 E = \sum_{i=23}^{30}b_{i}2^{i-23}=128\\
 F = \sum_{i=1}^{23}b_{23-i}2^{-i}=0.5707963705062866\\
@@ -558,13 +554,13 @@ print(calfloat(cale(e), calf(f)))
 
 #### 浮点数转二进制
 
-如 $v=3.1415927410125732$，分成整数部分3和小数部分0.1415927410125732，将整数部分转成二进制"11"，小数部分转成二进制 "0.00100100001111110110101"加起来可得到
+如 v=3.1415927410125732，分成整数部分 3 和小数部分 0.1415927410125732，将整数部分转成二进制"11"，小数部分转成二进制 "0.00100100001111110110101"加起来可得到
 $$
 (11.00100100001111110110101)_2 = 2^1×(1.10010010000111111011010)_2
 $$
 存在127的偏移，所以指数部分为128即10000000，而尾数部分则为10010010000111111011010
 
-数值的二进制表示可以通过JavaScript的toString(2)方法得到
+数值的二进制表示可以通过 JavaScript 的 toString(2) 方法得到
 
 ```javascript
 let b = 0.1415927410125732
