--- a/工具使用.md
+++ b/工具使用.md
@@ -200,7 +200,11 @@ ffmpeg -i "input_video.mp4" -f segment -segment_time 3600 -vcodec copy -reset_ti
 
 时长由参数 -segment_time 指定，单位为 s。这个处理似乎没有声音了。
 
+9. m3u8 （多个 ts 文件）转为 mp4
 
+```sh
+ffmpeg -i index.m3u8 -c copy out.mp4
+```
 
 # 正则表达式
 
@@ -2590,10 +2594,24 @@ int main(){
 ```
 
 
+### 编辑头文件路径
+
+`Ctrl+Shift+P` 打开 C/C++: Edit Configurations (JSON)，在 `c_cpp_propertites.json` 中的 includePath 中添加
+
+```json
+"includePath": [
+	"${workspaceFolder}/**",
+	"D:\\protoc-26.1-win64\\src\\**"
+],
+```
+
 ## 扩展
 ### Live Server
+
 Live Server与nginx的功能类似，都是通过代理实现本地服务器。
+
 Live Server的默认端口为5500，默认根文件夹为vscode当前打开的目录，默认主机名为`127.0.0.1`，如果需要修改配置，可以参考[vscode-live-server/docs/settings.md](https://github.com/ritwickdey/vscode-live-server/blob/HEAD/docs/settings.md)
+
 如果当前目录中有`index.html`或`index.htm`显示`index.html`，否则只会是一个文件浏览器
 
 
