--- a/深度学习库.md
+++ b/深度学习库.md
@@ -1,4 +1,76 @@
+
+# onnxruntime
+
+onnxruntime 是一个加速多种语言训练和推理的库，支持 Python、C++、C、C#、Java、JavaScript、Objective-C、Julia、Ruby 语言，支持Windows、Mobile 平台
+
+
+## 导出模型
+
+```python
+# Export the model
+torch.onnx.export(model,             # model being run
+                (text, offsets),     # model input (or a tuple for multiple inputs)
+                "ag_news_model.onnx",  # where to save the model (can be a file or file-like object)
+                export_params=True,  # store the trained parameter weights inside the model file
+                opset_version=10,          # the ONNX version to export the model to
+                do_constant_folding=True,  # whether to execute constant folding for optimization
+                input_names = ['input', 'offsets'],   # the model's input names
+                output_names = ['output'], # the model's output names
+                dynamic_axes={'input' : {0 : 'batch_size'},    # variable length axes
+                              'output' : {0 : 'batch_size'}})
+
+```
+## 推理
+
+使用 CPU 进行推理
+
+```python
+options = ort.SessionOptions()  
+options.inter_op_num_threads = 4  
+options.intra_op_num_threads = 4  # 设置线程数可以加速推理
+session = ort.InferenceSession("model.onnx", options)
+onnx_inputs = {inp.name: input_feature for inp in self.session.get_inputs()}  
+output = session.run(None, onnx_inputs)
+```
+
+使用 GPU 进行推理
+
+```python
+providers = [("CUDAExecutionProvider", {"use_tf32": 0})]
+sess_options = ort.SessionOptions()
+sess = ort.InferenceSession("my_model.onnx", sess_options=sess_options, providers=providers)
+```
+
+
+
+
 # tensorflow
+
+## 安装
+
+> windows 平台的GPU版本只支持到 2.10.0
+
+
+```powershell
+pip install tensorflow-gpu==2.10.0
+```
+
+然后下载 cuda 和 cudnn，经过测试，cuda 的版本可以为 **11.8**，cudnn 下载完之后会有 bin, include 和 lib 三个文件夹，将这三个文件放在 cuda 安装位置对应的文件夹。
+
+测试代码如下
+
+```python
+import tensorflow as tf
+print(tf.config.list_physical_devices('GPU'))
+```
+
+
+## 训练模板
+
+参考 [deepLearning_basic/tf_custom/main.py at main · Xiang-M-J/deepLearning_basic (github.com)](https://github.com/Xiang-M-J/deepLearning_basic/blob/main/tf_custom/main.py)
+
+
+
 
 ## 基础使用
 
@@ -385,15 +457,58 @@ array([[[[0.61720157, 0.46546352],
 默认 axis = 0，所以从第一维度抽取切片。因为 indices 为 [[1,2], [0,1]]，是一个 2 × 2 的矩阵，所以切片的第一维变成了 (2,2)，可以看到 slices 变成了 (2,2,2,2) 维的张量。而 indices[0, :] = [1,2]，表明 slices[0, :, :, :] = params[1:3, :, :]，indices[1, :] = [0, 1]，表明 slices[1, :, :, :] = params[0:2, :, :]。
 
 
+### tf.keras.layers
+
+#### tf.keras.layers.LSTM
+
+参数中的
+
+return_sequences = True：返回值为 `[batch_size, seq_len, feature_dim]`
+
+return_state = True：返回值为两个 `[batch_size, feature_dim]` （作为列表的形式返回）
+
+如果 return_sequences 和 return_state 均为 True，那么返回值为
+`[batch_size, seq_len, feature_dim], [[batch_size, feature_dim],[batch_size, feature_dim]]`
+
+如果需要让 LSTM 支持 GPU 训练，需要满足下面的条件
+1. `activation` == `tanh`
+2. `recurrent_activation` == `sigmoid`
+3. `recurrent_dropout` == 0
+4. `unroll` is `False`
+5. `use_bias` is `True`
+6. Inputs, if use masking, are strictly right-padded.
+7. Eager execution is enabled in the outermost context.
+
+
+
+
 
 
 
 # PyTorch
 
+## 安装
+
+直接去官网下载对应版本即可，默认会下载 cudatoolkit，似乎不需要额外安装 cuda 和 cudnn，测试代码如下
+
+```python
+import torch
+print(torch.cuda.is_available())
+```
+
+在安装时，如果遇到下载速度慢的情况，可以重试几次或者使用下载工具下载 whl 文件后再安装，最好不要换源，换源之后下载的是cpu版本。
+
+## 操作
+
+### 生成带状矩阵
+
+```python
+e = torch.ones([16, 16])
+torch.tril(e, 4) * torch.triu(e, -4)
+```
 
 
 ## API
-
 
 
 ### torch
@@ -409,6 +524,63 @@ torch.chunk(input, chunks, dim=0) → List of Tensors
 > [!TIP]
 >
 > chunk 函数可能会返回小于指定 chunks 的分块（如 input 对应的维度），如果需要确切分块，使用 torch.tensor_split()
+
+
+#### torch.einsum
+
+和 einops 库类似，可以用来指定矩阵计算方式，einsum 的基本用法如下
+
+```python
+torch.einsum('ii', torch.randn(4, 4))
+```
+
+上式实现了对矩阵主对角线元素求和的功能，其中 i 表示维度，一共可以使用 a-z 共 26 个字母，即 26 个维度。
+
+
+
+**提取主对角线元素**
+
+```python
+torch.einsum('ii->i', torch.randn(4, 4))
+```
+
+
+**向量外积**
+
+```python
+torch.einsum('i,j->ij', x, y)
+```
+
+
+**矩阵点积**
+
+```python
+torch.einsum("ij,ij->ij", [d,e])
+```
+
+
+
+**矩阵乘法**
+
+
+```python
+torch.einsum('bij,bjk->bik', As, Bs)
+torch.einsum('tbij,bjk->bik', As, Bs)
+```
+
+
+>对于那些不关心的维度，可以使用 ...
+
+```python
+torch.einsum("...ij, ...jk-> ...ik", [a,b])
+```
+
+
+**矩阵转置**
+
+```python
+torch.einsum("...ij->...ji", c)
+```
 
 
 
