--- a/深度学习库.md
+++ b/深度学习库.md
@@ -1,7 +1,24 @@
 
 # onnxruntime
 
+
+
 onnxruntime 是一个加速多种语言训练和推理的库，支持 Python、C++、C、C#、Java、JavaScript、Objective-C、Julia、Ruby 语言，支持Windows、Mobile 平台
+
+
+> [!NOTE] 
+> 如果想要导出别人的模型，注意别人的模型是否存在 export 函数，使用 export 函数可以方便导出
+
+
+
+> [!WARNING] 
+> 如果导出的模型体积很小，仅有 1 kB，这是由于没有导出模型的参数，可能是因为 forward 函数中返回的值没有包括（有参数）模型的输出，需要返回该输出
+
+
+> [!DANGER] 
+> ONNX 默认只会导出和模型参数有关的操作，在这种情况下，无论怎么修改 forward 函数，都不能得到与模型参数无关的数据，为了能够导出 forward 函数中的所有操作，需要在 export 时设置 `export_modules_as_functions=True`（设置这个似乎没有什么用），onnx 的输入只有模型的输入
+
+
 
 
 ## 导出模型
@@ -41,6 +58,10 @@ sess_options = ort.SessionOptions()
 sess = ort.InferenceSession("my_model.onnx", sess_options=sess_options, providers=providers)
 ```
 
+
+使用 onnx 进行量化
+
+可以使用 onnxruntime.quantization 中的 quantize_dynamic 进行量化
 
 
 
