--- a/工具使用.md
+++ b/工具使用.md
@@ -121,7 +121,145 @@ inet 192.168.40.128
 需要安装 Fillzilla，主机输入网址，用户名输入xmj 密码输入 端口输入22
 
 
-# ffmpeg
+
+# WebAssembly
+
+>一项可将其他语言编写的程序放在浏览器中运行的技术
+
+## Emscripten
+
+让 c/c++ 代码在浏览器中运行
+
+### 安装步骤
+
+```cmd
+git clone https://github.com/juj/emsdk.git
+cd emsdk
+```
+
+接下来执行 
+
+```sh
+emsdk install --build=Release sdk-incoming-64bit binaryen-master-64bit
+```
+但是大概率会报如下错误
+
+```cmd
+error: tool or SDK not found: 'sdk-incoming-64bit'
+```
+
+此时使用如下方式来进行安装
+
+```sh
+emsdk install latest
+```
+这一步需要从网络中下载一些资源，需要等待一段时间
+
+然后激活环境（向当前终端写入一些环境变量）
+
+```sh
+emsdk activate latest
+```
+
+关闭当前终端后，为了重新恢复环境，可以运行下面的命令
+
+```sh
+emsdk_env.bat
+```
+
+
+### 编译 C/C++
+
+示例 c 代码如下
+```c
+#include <stdio.h>
+
+int main(int argc, char ** argv) {
+  printf("Hello World\n");
+}
+```
+
+在配置过 Emscripten 编译环境的终端窗口中，运行下列命令
+
+```sh
+emcc hello.c -s WASM=1 -o hello.html
+```
+
+对应的生成 `hello.wasm`、`hello.js` 和 `hello.html`。
+
+> 生成的 html 不能直接在浏览器中打开，需要在本地服务器打开。
+
+html 可以指定模板，如下所示
+
+```sh
+emcc -o hello2.html hello2.c -O3 -s WASM=1 --shell-file html_template/shell_minimal.html
+```
+
+这里的 shell_minimal.html 的位置位于 upstream/emscription/src 中（该位置可能不固定）
+
+
+### 调用 C 中自定义方法
+
+
+编写下面的 c 代码（直接放在 emsdk 文件夹即可）
+
+```c
+#include <stdio.h>
+#include <emscripten/emscripten.h>
+
+int main(int argc, char ** argv) {
+    printf("Hello World\n");
+}
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+int EMSCRIPTEN_KEEPALIVE myFunction(int argc, char ** argv) {
+  printf("我的函数已被调用\n");
+}
+
+#ifdef __cplusplus
+}
+#endif
+
+```
+
+默认情况下，Emscripten 生成的代码只会调用 `main()` 函数，其他的函数将被视为无用代码。在一个函数名之前添加 `EMSCRIPTEN_KEEPALIVE` 能够防止这样的事情发生。你需要导入 `emscripten.h` 库来使用 `EMSCRIPTEN_KEEPALIVE`。
+
+使用下面的命令来编译程序
+
+```sh
+emcc -o hello3.html hello3.c -O3 -s WASM=1 -s "EXTRA_EXPORTED_RUNTIME_METHODS=['ccall']" --shell-file html_template/shell_minimal.html
+```
+
+虽然在本地服务器打开网页的效果与本来的相同，但是可以添加下面的元素来调用自定义方法
+
+首先添加一个 `<button>`，放在 `<script type='text/javascript'>` 开头标签之前
+
+```html
+<button class="mybutton">运行我的函数</button>
+```
+
+再在脚本文件中加上
+
+```js
+document.querySelector(".mybutton").addEventListener("click", function () {
+  alert("检查控制台");
+  var result = Module.ccall(
+    "myFunction", // name of C function
+    null, // return type
+    null, // argument types
+    null,
+  ); // arguments
+});
+```
+
+此时点击按钮便会出现对应的结果。
+
+
+
+# FFmpeg
 
 ## ffmpeg使用手册
 
