--- a/工具使用.md
+++ b/工具使用.md
@@ -261,6 +261,71 @@ document.querySelector(".mybutton").addEventListener("click", function () {
 
 # FFmpeg
 
+
+## 使用 Visual studio 进行编译
+
+参考链接：[CompilationGuide/MSVC – FFmpeg](https://trac.ffmpeg.org/wiki/CompilationGuide/MSVC)
+[Compiling FFmpeg with X264 on Windows 10 using MSVC | ROXLU](https://www.roxlu.com/2019/062/compiling-ffmpeg-with-x264-on-windows-10-using-msvc)
+
+
+首先需要下载 [MSYS2](https://www.msys2.org/) 和 [Yasm](https://yasm.tortall.net/Download.html)，并且为它们配置环境变量，将 yasm 的可执行文件命名为 yasm.exe。对于 msys2，修改目录下的 msys2_shell.cmd 中的
+
+```bat
+rem set MSYS2_PATH_TYPE=inherit
+```
+
+为
+
+```bat
+set MSYS2_PATH_TYPE=inherit
+```
+
+
+打开visual studio 自带的cmd，`Tools` -> `Command Line` -> `Developer Command Prompt`。为了编译 64 位，需要执行下面的命令来启用 64 位编译器（ vcvarsall.bat 的位置根据安装位置改变，建议直接使用 everything 进行搜索）
+
+```cmd
+D:\VisualStudio\Community\VC\Auxiliary\Build\vcvarsall.bat amd64
+```
+
+打开 msys2 中的 msys2_shell.cmd，在弹出的窗口进行如下操作
+。。。
+
+
+## 在 Visual studio 中使用 ffmpeg
+
+注意从[Releases · BtbN/FFmpeg-Builds (github.com)](https://github.com/BtbN/FFmpeg-Builds/releases)下载-shared.zip版本，下面是解压后的文件夹
+
+├─bin
+├─doc
+├─include
+└─lib
+
+先设置项目，在 `c/c++` -> `general` -> `Additional Include Directories` 中添加头文件目录 include，同时设置 `SDL checks` 为 No。再在 `Linker` -> `General` -> `Additional Library Directories` 添加 lib 目录，最后在执行时，需要将 bin 文件夹的 dll 文件拷贝至执行文件路径中。
+
+下面是一个简单示例
+
+```c
+#include<stdio.h>
+
+// 声明链接库，否则会报错
+#pragma comment (lib, "avcodec.lib")
+#pragma comment (lib, "avdevice.lib")
+#pragma comment (lib, "avfilter.lib")
+#pragma comment (lib, "avformat.lib")
+#pragma comment (lib, "avutil.lib")
+#pragma comment (lib, "swresample.lib")
+#pragma comment (lib, "swscale.lib")
+
+#include "libavcodec/avcodec.h"
+#include "libavformat/avformat.h"
+
+void main() {
+	printf("%s\n", avcodec_configuration());
+}
+```
+
+
+
 ## ffmpeg使用手册
 
 0. ffmpeg下载：[ffmpeg第一弹:ffmpeg介绍和开发环境搭建 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/336663258)
