--- a/工具使用.md
+++ b/工具使用.md
@@ -324,6 +324,20 @@ void main() {
 }
 ```
 
+注意如果不使用 `#pragma` 声明链接库，需要在 `Linker` -> `Input` -> `Additional Dependencies` 中添加
+
+```
+avcodec.lib
+avdevice.lib
+avfilter.lib
+avformat.lib
+avutil.lib
+postproc.lib
+swscale.lib
+swresample.lib
+```
+
+
 
 
 ## ffmpeg使用手册
