--- a/多媒体.md
+++ b/多媒体.md
@@ -170,6 +170,28 @@ ffmpeg -i index.m3u8 -c copy out.mp4
 一个实时通信（音视频、文件传输、屏幕共享等）的基于浏览器的 API，一般的 WebRTC 直接使用 js 编写，通过 html 可视化。
 
 
+## 其它实现
+
+
+### golang
+
+[pion/webrtc: Pure Go implementation of the WebRTC API (github.com)](https://github.com/pion/webrtc)
+
+
+### Rust
+
+[webrtc-rs/webrtc: A pure Rust implementation of WebRTC (github.com)](https://github.com/webrtc-rs/webrtc)
+
+
+### Flutter/C++
+
+[flutter-webrtc/flutter-webrtc: WebRTC plugin for Flutter Mobile/Desktop/Web (github.com)](https://github.com/flutter-webrtc/flutter-webrtc)
+
+
+### React/Java
+
+[react-native-webrtc/react-native-webrtc: The WebRTC module for React Native (github.com)](https://github.com/react-native-webrtc/react-native-webrtc)
+
 
 ## 基本教程
 
