--- a/深度学习库.md
+++ b/深度学习库.md
@@ -565,6 +565,37 @@ torch.tril(e, 4) * torch.triu(e, -4)
 ```
 
 
+### 自定义归一化层
+
+假设希望仅对每个通道进行归一化，即假设输入数据为 `[N C H W]`，只对 C 通道计算均值和方差
+
+```python
+class ChannelNormalization(nn.Module):  
+    def __init__(self, input_dimension, eps=1e-5):  
+        super().__init__()  
+        param_size = [1, input_dimension, 1, 1]  
+        self.gamma = Parameter(torch.Tensor(*param_size).to(torch.float32))  
+        self.beta = Parameter(torch.Tensor(*param_size).to(torch.float32))  
+        init.ones_(self.gamma)  
+        init.zeros_(self.beta)  
+        self.eps = eps  
+  
+    def forward(self, x):  
+        if x.ndim == 4:  
+            _, C, _, _ = x.shape  
+            stat_dim = (1,)  
+        else:  
+            raise ValueError("Expect x to have 4 dimensions, but got {}".format(x.ndim))  
+        mu_ = x.mean(dim=stat_dim, keepdim=True)  # [B,1,T,F]  
+        std_ = torch.sqrt(  
+            x.var(dim=stat_dim, unbiased=False, keepdim=True) + self.eps  
+        )  # [B,1,T,F]  
+        x_hat = ((x - mu_) / std_) * self.gamma + self.beta  
+        return x_hat
+```
+
+
+
 ## API
 
 
@@ -661,7 +692,7 @@ output: (N, C×∏(kernel_size), L)，其中 L 为
 $$
 L = \mathop \prod \limits_d \left[ {{{{\rm{spatial\_size}}[d]{\rm{ + 2}} \times {\rm{padding}}[d] - {\rm{dilation}}[d] \times ({\rm{kernel\_size}}[d] - 1) - 1} \over {{\rm{stride}}[d]}} + 1} \right]
 $$
-unfold 的运算很简单，先不考虑 input 的 N 和 C 维度，只考虑 H 和 W，类似于卷积，将核对应的那一块特征图直接抽取展平，之后对于每个 C 维度，都进行相同的操作，将展平后的数据放在一起，数据的个数为 C×∏(kernel_size)。下面是一个示例
+unfold 的运算很简单，先不考虑 input 的 N 和 C 维度，只考虑 H 和 W，类似于卷积，将核对应的那一块特征图直接抽取展平，将一个 (H W) 维度的特征图全部抽取展平后连在一起，形成 ∏(kernel_size) × L 维数据，之后对于每个 C 维度，都进行相同的操作，将展平后的数据堆在一起，数据的个数为 C×∏(kernel_size)。下面是一个示例
 
 ```python
 import torch.nn as nn
@@ -693,4 +724,127 @@ torch.nn.functional.pad(input, pad, mode='constant', value=None)
 该函数主要作用体现在 pad 中，当 pad 的形式为 (padding_left, padding_right)，填充最后 1 个维度，当 pad 的形式为 (padding_left, padding_right, padding_top, padding_bottom)，填充最后 2 个维度，以此类推。
 
 
+
+### nn
+
+#### Normalization
+
+各种 normalization 的作用都是归一化，表示为
+
+$$
+y = {{x - E[x]} \over {\sqrt {Var[x] + \varepsilon } }}*\gamma  + \beta 
+$$
+只不过在计算均值和方差时有所不同。
+
+batchNorm是在batch上，对小batchsize效果不好；layerNorm在通道方向上，主要对RNN作用明显；instanceNorm在图像像素上，用在风格化迁移；GroupNorm将channel分组，然后再做归一化, 在batchsize<16的时候, 可以使用这种归一化。
+
+##### Batch Normalization
+
+```python
+class torch.nn.BatchNorm2d(num_features, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True, device=None, dtype=None)
+```
+
+
+与其它归一化方法最大的差距在于会对一个 mini-batch 的数据进行归一化，假设输入为 `[B C H W]`，那么计算 `[B H W]` 这三个维度的均值和方差。
+
+```python
+inputs = torch.rand([16,32,64,64])
+
+# print(inputs)
+
+mean = torch.mean(inputs, [0,2,3], keepdim=True) # 按通道维度即32那个维度，计算那个维度对应的16*64*64个值的平均值
+
+var = torch.var(inputs, [0,2,3], unbiased=False, keepdim=True)
+
+bn = nn.BatchNorm2d(32)(inputs)
+
+bn_ = (inputs-mean)/torch.sqrt(var+1e-5)
+```
+
+
+> [!NOTE]
+> 如果归一化数据数量少、批次不够多，那么手动计算和方法计算的误差会较大，增大 B、 H 和 W 可以有效降低误差
+
+
+##### LayerNorm
+
+```python
+class torch.nn.LayerNorm(normalized_shape, eps=1e-05, elementwise_affine=True, bias=True, device=None, dtype=None)
+```
+
+layernorm 计算均值和方差时，完全按照 normalized_shape 来，normalized_shape 的维度是任意的，但是必须是输入数据的最后若干维，如输入数据维度为 `[B C H W]`（H 不等于 W），如果设置 normalized_shape 为 H，则会报错。如果设置 normalized_shape 为 W，则会按照最后一个维度来计算均值和方差，normalized_shape 为 `[H W]`，则按照最后两个维度来计算均值和方差，依次类推。
+
+```python
+ln = nn.LayerNorm((32, 3, 128, 128))  
+x = torch.randn((32, 3, 128, 128))  
+y = ln(x)  
+y_ = (x - x.mean()) / torch.sqrt(x.var()+1e-5)   # 直接对全局求均值和方差
+print(torch.sum(torch.abs(y-y_)))
+
+ln = nn.LayerNorm((128, 128))  
+x = torch.randn((32, 3, 128, 128))  
+y = ln(x)  
+y_ = (x - x.mean(dim=(-2, -1), keepdim=True)) / torch.sqrt(x.var(dim=(-2, -1), unbiased=False, keepdim=True)+1e-5)    # 对最后两个维度求均值和方差
+print(torch.sum(torch.abs(y-y_))) 
+```
+
+
+##### InstanceNorm
+
+```python
+class torch.nn.InstanceNorm2d(num_features, eps=1e-05, momentum=0.1, affine=False, track_running_stats=False, device=None, dtype=None)
+```
+
+InstanceNorm2d 和 LayerNorm 有点像，与 BatchNorm2d 的区别在于不会对一个mini-batch求均值和方差，而是在mini-batch的每个样本的每个通道上求均值和方差。
+
+```python
+In = nn.InstanceNorm2d(16)  
+x = torch.randn((32, 16, 256, 256))  
+y = In(x)  
+y_ = (x - x.mean(dim=(-2, -1), keepdim=True)) / torch.sqrt(x.var(dim=(-2, -1), unbiased=False, keepdim=True)+1e-5)  
+print(torch.sum(torch.abs(y-y_)))
+```
+
+
+
+> [!NOTE]
+> 与 BatchNorm2d 类似，如果归一化数据数量少，那么手动计算和方法计算的误差会较大，但是可以通过增大 H 和 W 降低误差
+
+
+
+##### GroupNorm
+
+```python
+class torch.nn.GroupNorm(num_groups, num_channels, eps=1e-05, affine=True, device=None, dtype=None)
+```
+
+
+介于LN和IN之间，其首先将channel分为许多组（group），对每一组做归一化，即先将feature的维度由 `[N, C, H, W]` reshape 为 `[N, G，C//G , H, W]`，归一化的维度为 `[C//G , H, W]`
+
+```python
+groups = 8
+
+inputs = torch.rand([16,32,64,64])
+
+inputs_ = inputs.reshape([16, groups, 32//groups, 64, 64])
+
+mean = torch.mean(inputs_, [2,3,4], keepdim=True) # 按batch和group维度即[16,8]那个维度，计算那个维度对应的4*64*64个值的平均值
+
+var = torch.var(inputs_, [2,3,4], unbiased=False, keepdim=True)
+
+gn = nn.GroupNorm(groups, 32)(inputs)
+
+gn_ = (inputs_-mean)/torch.sqrt(var+1e-5)
+
+gn_ = gn_.reshape([16, 32, 64,64])
+
+print(torch.sum(torch.abs(gn-gn_)))    # 结果差距很小
+
+```
+
+对于输入数据 `[N C H W]`
+
+`GroupNorm(C, C)` 相当于 `InstanceNorm2d(C)`
+
+`GroupNorm(1, C)` 相当于 `LayerNorm((C, H, W))` ，但是不需要额外计算 H 和 W 的大小
 
