--- a/多媒体.md
+++ b/多媒体.md
@@ -2,7 +2,9 @@
 # FFmpeg
 
 
-## 使用 Visual studio 进行编译
+## 编译 FFmpeg
+
+### 使用 Visual studio 进行编译
 
 参考链接：[CompilationGuide/MSVC – FFmpeg](https://trac.ffmpeg.org/wiki/CompilationGuide/MSVC)
 [Compiling FFmpeg with X264 on Windows 10 using MSVC | ROXLU](https://www.roxlu.com/2019/062/compiling-ffmpeg-with-x264-on-windows-10-using-msvc)
@@ -27,11 +29,13 @@ set MSYS2_PATH_TYPE=inherit
 D:\VisualStudio\Community\VC\Auxiliary\Build\vcvarsall.bat amd64
 ```
 
-打开 msys2 中的 msys2_shell.cmd，在弹出的窗口进行如下操作
-。。。
+打开 msys2 中的 msys2_shell.cmd，在弹出的窗口进行如下操作 。。。
 
 
-## 在 Visual studio 中使用 ffmpeg
+## ffmpeg C 编程
+
+
+### 开发环境搭建
 
 注意从[Releases · BtbN/FFmpeg-Builds (github.com)](https://github.com/BtbN/FFmpeg-Builds/releases)下载-shared.zip版本，下面是解压后的文件夹
 
@@ -78,14 +82,145 @@ swresample.lib
 ```
 
 
+### 解码视频
+
+> 使用的 ffmpeg 版本为 N-109449-gb92260f70a-20221224
+
+下面的代码需要的头文件如下
+
+```c
+#include "libavcodec/avcodec.h"
+#include "libavformat/avformat.h"
+#include "libavutil/imgutils.h"
+#include "libswscale/swscale.h"
+```
+
+首先先声明一个 Format I/O上下文，然后使用 `avformat_open_input` 打开视频
+
+```c
+AVFormatContext* fc = NULL;
+const char* path = "record.mp4";
+// 后两个参数可以为 NULL
+int ret = avformat_open_input(&fc, path, NULL, NULL);
+if (ret)
+{
+	printf("open error");
+	return;
+}
+```
+
+然后从媒体文件中读取一部分获取流信息
+
+```c
+ret = avformat_find_stream_info(fc, NULL);
+if ret)
+{
+	printf("find stream info error");
+}
+int time = fc->duration;   // 返回时间单位为 us
+int minute = (time / 1000000) / 60;
+int second = (time / 1000000) % 60;
+
+av_dump_format(fc, NULL,  path, 0);  // 打印流信息
+```
+
+然后从Format I/O上下文中找到视频流的索引（一个媒体文件可能包括视频流，音频流和字幕流等）
+
+```c
+int VideoStream = -1, AudioStream = -1; // 寻找流
+VideoStream = av_find_best_stream(fc, AVMEDIA_TYPE_VIDEO, -1, -1, NULL, -1);
+AudioStream = av_find_best_stream(fc, AVMEDIA_TYPE_AUDIO, -1, -1, NULL, -1);
+```
+
+通过索引定位视频流，然后找到解码器和 codec 上下文，并且打开 codec 上下文
+
+```c
+AVCodec* codec = avcodec_find_decoder(fc->streams[VideoStream]->codecpar->codec_id);
+AVCodecContext* cc = avcodec_alloc_context3(codec);
+// 将解码参数复制到解码上下文中
+avcodec_parameters_to_context(cc, fc->streams[VideoStream]->codecpar);
+ret = avcodec_open2(cc, codec, NULL);
+if (ret)
+{
+	printf("codec open error");
+}
+printf("codec open success");
+```
+
+现在可以解码视频了，解码是一帧一帧解码
+
+```c
+AVFrame* frame = av_frame_alloc();  // 储存原始帧
+AVFrame* frameYUV = av_frame_alloc(); // 储存转换后的帧
+int width = fc->streams[VideoStream]->codecpar->width;   // 获取视频宽度
+int height = fc->streams[VideoStream]->codecpar->height; // 获取视频高度
+int fmt = fc->streams[VideoStream]->codecpar->format;	 // 获取视频格式
+int size = av_image_get_buffer_size(AV_PIX_FMT_YUV420P, width, height, 1); // 获取一帧数据大小
+```
+
+`av_image_fill_arrays` 为目标帧 `frameYUV` 填充一帧空间
+
+```c
+uint8_t* buff = NULL;
+buff = (uint8_t*)av_malloc(size);
+
+// 一帧数据
+av_image_fill_arrays(frameYUV->data, frameYUV->linesize, buff, AV_PIX_FMT_YUV420P, width, height, 1);
+```
+
+声明转换上下文和数据包
+
+```c
+AVPacket* packet = (AVPacket*)av_malloc((sizeof(AVPacket)));
+
+// 转换上下文
+struct SwsContext* swsCtx = NULL;
+swsCtx = sws_getContext(width, height, fmt, width, height, AV_PIX_FMT_YUV420P, SWS_BICUBIC, NULL, NULL, NULL);
+```
+
+现在开始转换
+
+```c
+while (av_read_frame(fc, packet) >= 0)
+{
+// 视频流才处理
+	if (packet->stream_index == AVMEDIA_TYPE_VIDEO)
+	{
+		// 解码视频
+		avcodec_send_packet(cc, packet);
+		avcodec_receive_frame(cc, frame);
+		
+		// 转换视频
+		sws_scale(swsCtx, frame->data, frame->linesize, 0, height, frameYUV->data, frameYUV->linesize);
+		
+		// 这里保存数据流
+		fwrite(frameYUV->data[0], 1, width * height, fp1);
+		fwrite(frameYUV->data[1], 1, width * height / 4, fp2);
+		fwrite(frameYUV->data[2], 1, width * height / 4, fp3);
+	}
+}
+```
+
+最后是收尾工作，释放申请的资源
+
+```c
+av_packet_free(packet);
+av_frame_free(&frame);
+av_frame_free(&frameYUV);
+avcodec_close(cc);
+sws_freeContext(swsCtx);
+```
 
 
-## ffmpeg使用手册
 
-0. ffmpeg下载：[ffmpeg第一弹:ffmpeg介绍和开发环境搭建 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/336663258)
+
+## ffmpeg 命令行
+
+ffmpeg下载：[ffmpeg第一弹:ffmpeg介绍和开发环境搭建 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/336663258)
     
-    注意从[Releases · BtbN/FFmpeg-Builds (github.com)](https://github.com/BtbN/FFmpeg-Builds/releases)下载-shared.zip版本
-    
+> 注意从[Releases · BtbN/FFmpeg-Builds (github.com)](https://github.com/BtbN/FFmpeg-Builds/releases)下载-shared.zip版本
+
+
 1. ffmpeg 录制桌面： 
 
 ```powershell
@@ -162,6 +297,7 @@ ffmpeg -i "input_video.mp4" -f segment -segment_time 3600 -vcodec copy -reset_ti
 ```sh
 ffmpeg -i index.m3u8 -c copy out.mp4
 ```
+
 
 
 
